--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -1,5 +1,13 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+
+:root {
+    --font-padrao: Verdana, Geneva, Tahoma, sans-serif;
+    --font-title: 'Passion One', cursive;
+    --font-cordel: 'Sriracha', cursive;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -8,6 +16,7 @@
 html, body {
     height: 100vh;
     background-color: lightgray;
+    font-family: var(--font-padrao);
 }
 
 header {
@@ -19,7 +28,8 @@ header {
 
 header h1 {
     font-variant: small-caps;
-    
+    font-family: var(--font-title);
+    font-size: 7vw;
 }
 
 header a, footer a {
@@ -37,6 +47,11 @@ main section {
     padding-bottom: 10vh;
     padding-left: 30px;
     line-height: 2em;
+}
+
+main > section p {
+    font-family: var(--font-cordel);
+    font-size: 3vw;
 }
 
 section.fundo_normal {
