--- a/exercicios/ex026/estilos01/screen.css
+++ b/exercicios/ex026/estilos01/screen.css
@@ -22,10 +22,11 @@ header > h1 {
     padding: 15px;
     color: rgb(0, 0, 0);
     text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.406);
+    height: 100px;
 }
 
 menu {
-    height: 100px;
+    padding-bottom: 10px;
 }
 
 menu ul {
@@ -35,12 +36,9 @@ menu ul {
 
 menu ul > li {
     display: inline-block;
-    
     background-color: rgb(78, 78, 78);
     color: white;
-
     padding: 10px;
-    margin-top: 42px;
     border-radius: 8px;
     font-weight: bold;
 }
