--- a/exercicios/ex026/estilos05/style.css
+++ b/exercicios/ex026/estilos05/style.css
@@ -10,6 +10,7 @@
     --cor03: #8F6900;
     --cor04: #4262D6;
     --cor05: #394C8F;
+    --cor06: #25325F;
 
     --font-padrao: 'Roboto', sans-serif;
     --font-titulo: 'Roboto Slab', 'Times New Roman', serif;
